[project]
name = "ai-agent-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-groq>=0.3.6",
    "langgraph>=0.5.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]